about overflow resolved

--- a/css/about.css
+++ b/css/about.css
@@ -214,7 +214,8 @@
 @media (max-width: 1000px) {
   .story-detail-content {
     color: #969aa0;
-    width: 80vw;
+    width: 60vh;
+    font-size: 14px;
   }
   .story-content-wrap {
     flex-direction: column;
